--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
+  },
+  "dependencies": {
+    "react-dom": "^16.3.2"
   }
 }
