--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.0",
     "prop-types": "^15.6.1",
+    "sinon": "^5.0.7",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
