--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
     "test": "karma start karma.conf.js",
     "watch": "webpack --watch",
     "start": "webpack-dev-server --open",
-    "build": "webpack"
+    "build": "webpack",
+    "precommit": "lint-staged",
+    "eslint:init": "eslint --init",
+    "format": "prettier --write \"src/**/*.js\""
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
   },
   "keywords": [
     "react",
@@ -37,7 +47,13 @@
     "sinon": "^5.0.7",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.12.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.5",
+    "prettier": "^1.12.1"
   },
   "dependencies": {
     "react-dom": "^16.3.2"
